--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -98,7 +98,9 @@
                 {% assign parent_link = p.permalink | remove: 'index.html' %}
                 <li class="nav-item {% if page.url contains parent_link %}active{% endif %}">
                   {% if p.permalink contains '/blog/' %}{% assign url = '/blog/' %} {% else %}{% assign url = p.url %}{% endif %}
-                  <a class="nav-link" href="{{ url | relative_url }}">
+                  <!-- <a class="nav-link" href="#{{ url | relative_url }}"> -->
+                  <!-- # modified by chenghao xu -->
+                  <a class="nav-link" href="#{{ url | replace: '/', '' }}">
                     {{- p.title }}
                     {% if page.url contains p.url %}
                       <span class="sr-only">(current)</span>
