--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -1,6 +1,6 @@
 ---
 ---
-<div class="row">
+<div class="row justify-content-center">
   {% if site.enable_publication_thumbnails %}
     <div class="col-2 abbr" style="margin-right: -5%">
       {%- if entry.abbr -%}
@@ -348,7 +348,7 @@
     {% endif %}
   </div>
 
-  <div class="col-2 PubImg" style="margin-left: -7%" align="left">
+  <div class="col-2 PubImg d-flex align-items-center" style="margin-left: -7%" align="left">
     <img src="/assets/img/{{ entry.image }}" width="200" height="120"
       itemprop="image" alt="">
   </div>
