update new paper

--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -1,6 +1,6 @@
 ---
 ---
-<div class="row justify-content-center">
+<div class="row">
   {% if site.enable_publication_thumbnails %}
     <div class="col-2 abbr" style="margin-right: -5%">
       {%- if entry.abbr -%}
