--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -100,11 +100,20 @@
                   {% if p.permalink contains '/blog/' %}{% assign url = '/blog/' %} {% else %}{% assign url = p.url %}{% endif %}
                   <!-- <a class="nav-link" href="#{{ url | relative_url }}"> -->
                   <!-- # modified by chenghao xu -->
-                  <a class="nav-link" href="#{{ url | replace: '/', '' }}">
-                    {{- p.title }}
-                    {% if page.url contains p.url %}
-                      <span class="sr-only">(current)</span>
-                    {% endif %}
+                  {% if p.layout contains 'cv' %}
+                    <a class="nav-link" href="{{ url | relative_url }}">
+                      {{- p.title }}
+                      {% if page.url contains p.url %}
+                        <span class="sr-only">(current)</span>
+                      {% endif %}
+                    </a>
+                  {% else %}
+                    <a class="nav-link" href="#{{ url | replace: '/', '' }}">
+                      {{- p.title }}
+                      {% if page.url contains p.url %}
+                        <span class="sr-only">(current)</span>
+                      {% endif %}
+                  {% endif %}
                   </a>
                 </li>
               {% endif %}
